k3s/steps-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steps-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: steps-ui
  template:
    metadata:
      labels:
        app: steps-ui
    spec:
      containers:
        - name: steps-ui
          image: localhost/steps-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: steps-ui
spec:
  type: NodePort
  selector:
    app: steps-ui
  ports:
    - port: 80
      targetPort: 80
