k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steps-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: homelab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steps-ui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: steps-api
                port:
                  number: 80
